--- a/file.css
+++ b/file.css
@@ -3,7 +3,6 @@
     left:0%;
     top:0%;
     width:10%;
-    background-color: aquamarine;
     height:100%;
 }
 #rside {
@@ -11,7 +10,6 @@
     right:0%;
     top:0%;
     width:10%;
-    background-color: aquamarine;
     height:100%;
 }
 .tops{
@@ -66,8 +64,57 @@
     height: 30%;
 }
 #pictext{
+    width: 16%;
     position: absolute;
-    top:40%;
+    top:45%;
     left:10%;
     text-align:center;
+}
+.prowtext{
+    width:60%;  
+    height:10%;
+    position: absolute;
+    left:30%;  
+}
+#ptext1{
+    position: absolute;
+    top:10%;
+}
+#ptext2{
+    position: absolute;
+    top:20%;
+}
+#ptext3{
+    position: absolute;
+    top:30%;
+}
+#ptext4{
+    position: absolute;
+    top:40%;
+}
+#ptext5{
+    position: absolute;
+    top:50%;
+}
+#ptext6{
+    position: absolute;
+    top:60%;
+}
+#ptext7{
+    position: absolute;
+    top:70%;
+}
+#ptext8{
+    position: absolute;
+    top:80%;
+}
+#footline{
+    position:absolute;
+    top:90%;
+}
+#foottext{
+    position: absolute;
+    top:95%;
+    width: 100%;
+    text-align: center;
 }
