--- a/file.css
+++ b/file.css
@@ -1,120 +1,297 @@
-#lside {
+#bc{
+    background-image: url(black-background_00313351.jpg);
+    width: 100%;
+    height: 120%;
     position: absolute;
-    left:0%;
-    top:0%;
-    width:10%;
-    height:100%;
+    left: 0%;
+    top: 0%;
+    z-index: 0;
 }
-#rside {
-    position: absolute;
-    right:0%;
-    top:0%;
-    width:10%;
-    height:100%;
-}
-.tops{
-    position: absolute;
-    top:0%;
-    width:14%;
-    height:5%;
-    text-align: center;
-} 
-#top1{
-    position: absolute;
-    left:10%;
-}
-#top2{
-    position: absolute;
-    left:24%;
-    text-align: left;
-}
-#top3{
-    position: absolute;
-    left:38%;
-}
-#top4{
-    position: absolute;
-    left:50%;
-}
-#top5{
-    position: absolute;
-    left:63%;
-}
-#top6{
-    position: absolute;
-    left:76%;
+#title{
+width: 100%;
+color: white;
+background-color: rgb(37, 37, 37);
+position:absolute;
+left:0%;
+top:0%;
+z-index:100;
 }
 .text{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
+}
+.title{
     font-size: 20px;
-}
-.line{
-    width: 80%;
-    position: absolute;
-    left: 10%;
-}
-#topline{
-    position: absolute;
-    top:5%;
-}
-#picp{
-    position: absolute;
-    top: 10%;
-    left:10%;
-    width: 20%;
-    height: 30%;
-}
-#pictext{
-    width: 16%;
-    position: absolute;
-    top:47%;
-    left:10%;
-    text-align:center;
-}
-.prowtext{
-    width:60%;  
-    height:10%;
-    position: absolute;
-    left:30%;  
-}
-#ptext1{
-    position: absolute;
-    top:10%;
-}
-#ptext2{
-    position: absolute;
-    top:25%;
-}
-#ptext3{
-    position: absolute;
-    top:35%;
-}
-#ptext4{
-    position: absolute;
-    top:45%;
-}
-#ptext5{
-    position: absolute;
-    top:58%;
-}
-#ptext6{
-    position: absolute;
-    top:65%;
-}
-#ptext7{
-    position: absolute;
-    top:78%;
-}
-#ptext8{
-    position: absolute;
-    top:88%;
-}
-#footline{
-    position:absolute;
-    top:95%;
-}
-#foottext{
-    position: absolute;
-    top:100%;
-    width: 100%;
     text-align: center;
 }
+#logo{
+    width: 90px;
+    height: 65px;
+    position: absolute;
+    top: 5%;
+}
+#Search{
+position: absolute;
+top: 8%;
+width:80%;
+left: 10%;
+padding-top:20px;
+border-bottom-left-radius: 20px;
+border-bottom-right-radius: 20px;
+background-color: rgb(88, 71, 60);
+z-index: 50;
+}
+#search1{
+    position: relative;
+    left: 35%;
+    width: 60%;
+    margin-bottom: 17px;
+}
+.pos2{
+    position: relative;
+    
+}
+.pos3{
+    position: relative;
+}
+#body{
+    width: 70%;
+    height: 95%;
+    position: absolute;
+    top: 19%;
+    left: 15%;
+    background-color: bisque;
+    z-index: 25;
+}
+.xmpl{
+    width: 94%;
+    height: 27%;
+    position: relative;
+    left: 3%;
+}
+#prop1 {
+    position: absolute;
+    top: 5%;
+    left: 7%;
+    text-align: left;   
+    font-size: 12px;
+}
+#bpos1{
+    position: absolute;
+    top: 80%;
+    left: 90%;
+    text-align: left;   
+    font-size: 12px;
+} 
+#prop2 {
+    position: absolute;
+    top: -15%;
+    left: 7%;
+    text-align: left;   
+    font-size: 12px;
+}
+#bpos2{
+    position: absolute;
+    top: 78%;
+    left: 90%;
+    text-align: left;   
+    font-size: 12px;
+} 
+#prop3 {
+    position: absolute;
+    top: 0%;
+    left: 7%;
+    text-align: left;   
+    font-size: 12px;
+}
+#bpos3{
+    position: absolute;
+    top: 78%;
+    left: 90%;
+    text-align: left;   
+    font-size: 12px;
+} 
+hr{
+    width: 80%;
+    position: relative;
+    
+}
+.pic{
+    position: relative;   
+    box-sizing: border-box;
+    width: 140px;
+    height: 140px;
+    z-index: 400;
+}
+.pic:hover{
+    width: 170px;
+    height: 170px;
+}
+a {
+    font-size: 20px;
+    text-align: center;
+
+}
+#btnpad{
+    position: absolute;
+    top: 105%;
+    left: 37%;  
+    z-index: 300;
+}
+.btn {
+    padding: 10px;
+    font-size:13px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(196, 196, 196);
+    color: rgb(60, 61, 58);
+    box-shadow:0px 0px 5px dimgray;
+    border:0px;
+}
+.btn.sz-big {
+    line-height: 20px;
+    font-size: 15px;
+
+}
+
+.btn.sz-small {
+ line-height: 5px;
+ font-size: 5px;
+ padding: 10px;
+}
+
+.btn:hover {
+       box-shadow:0px 0px 10px dimgray; 
+}
+
+.btn:active, .btn.active {  
+       box-shadow:0px 0px 10px rgb(63, 63, 63);
+    
+}
+
+.btn-primary {
+    background-color: rgb(226, 182, 171);
+    color: rgb(36, 3, 3);
+    border:0px;
+    box-shadow:0px 0px 5px dimgray;
+}
+.btn-primary.btn.sz-big {
+    background-color: rgb(226, 182, 171);
+    color: rgb(36, 3, 3);
+    border:0px;
+    box-shadow:0px 0px 5px dimgray;
+}   
+.btn-primary:hover {
+    box-shadow:0px 0px 10px dimgray;
+}
+.btn-primary.btn.sz-big:hover {
+    box-shadow:0px 0px 10px dimgray;
+}
+.btn-primary:active, .btn-primary.active {
+    background-color:rgb(122, 95, 88);
+     
+}
+.btn-primary.btn.sz-big:active, .btn-primary.active {
+    background-color:rgb(122, 95, 88);
+}
+
+.btn-warn {
+    background-color: rgb(28, 137, 145);
+    color: rgb(0, 255, 128);
+    box-shadow:0px 0px 10px rgb(255, 1, 234);
+    border: 0px solid lime;
+}
+
+.btn-warn:hover {
+    box-shadow: 0px 0px 10px rgb(87, 1, 61);
+}
+
+.btn-warn:active, .btn-warn.active {
+    box-shadow: 0px 0px 10px rgb(247, 8, 255);
+}
+
+.btn-error {
+    background-color: crimson;
+    color: rgb(49, 4, 4);
+    box-shadow: 0px 0px 5px dimgray;
+    border: 0px;    
+}
+
+.btn-error:hover {
+    box-shadow: 0px 0px 10px dimgray; 
+}
+
+.btn-error:active, .btn-error.active {
+    background-color: rgb(134, 13, 37);
+}
+
+.btn-success {
+    background-color: yellowgreen;
+    color: darkolivegreen;
+    box-shadow:0px 0px 5px dimgray;
+    border: 0px;
+}
+
+.btn-success:hover {
+    box-shadow:0px 0px 10px dimgray;
+}
+
+.btn-success:active, .btn-success.active {
+    background-color: rgb(109, 153, 28);
+}
+
+.btn-info {
+    background-color: rgb(54, 81, 235);
+    color: rgb(1, 25, 32);
+    box-shadow:0px 0px 5px dimgray;
+    border: 0px;
+}
+
+.btn-info:hover {
+    box-shadow:0px 0px 10px dimgray;
+}
+
+.btn-info:active, .btn-info.active {
+    background-color: rgb(37, 55, 155);
+}
+
+.input {
+    border:1px solid gray;
+    border-radius: 5px;
+    color:grey;
+    padding: 7px;
+}
+
+.input.sz-big {
+    padding: 10px;
+    line-height: 15px;  
+}
+
+.input.sz-small {
+    padding: 4px;
+}
+
+.input:hover {
+box-shadow: 0px 0px 7px dimgray;
+}
+.input:active, .input.active {
+}
+
+.input-success {
+    border:1px solid rgb(82, 133, 85);  
+    color:   rgb(82, 133, 85);
+}
+
+.input-success:hover {
+    box-shadow: 0px 0px 7px dimgray;
+}
+
+.input-success:active, .btn-success.active {}
+
+.input-error {
+    border:1px solid rgb(63, 9, 2);;  
+    color:   rgb(63, 9, 2);
+}
+
+.input-error:hover {}
+
+.input-error:active, .btn-error.active {}
